--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -14,13 +14,13 @@
 	</div>
 	<div class="wrapper header">
 		<form id="frm" action="getConn">
-			<span>service:</span><em><input id="service" name="service" type="text" value="172.16.13.62"/></em>
-			<span>database:</span><em><input id="database" name="database" type="text" value="hzfh"/></em>
-			<span>port:</span><em><input id="port" name="port" type="text" value="3306"/></em>
-			<span>uid:</span><em><input id="uid" name="uid" type="text" value="root"/></em>
-			<span>pwd:</span><em><input id="pwd" name="pwd" type="text" value="123456"/></em>
-			<span>Author:</span><em><input id="Author" name="Author" type="text" value="hz"/></em>
-			<span>SystemId:</span><em><input id="systemid" name="systemid" type="text" value="pem"/></em>
+			<span>service:</span><em><input id="service" name="service" type="text" value="127.0.0.1" placeholder="请输入数据库地址"/></em>
+			<span>database:</span><em><input id="database" name="database" type="text"  placeholder="请输入数据库名字"/></em>
+			<span>port:</span><em><input id="port" name="port" type="text" value="3306"placeholder="请输入数据库端口"/></em>
+			<span>uid:</span><em><input id="uid" name="uid" type="text" value="root"placeholder="请输入数据库账户"/></em>
+			<span>pwd:</span><em><input id="pwd" name="pwd" type="text" value="123456"placeholder="请输入数据库密码"/></em>
+			<span>Author:</span><em><input id="Author" name="Author" type="text" value="renchaochao" placeholder="请输入代码里的author"/></em>
+			<span>PackagePath:</span><em><input id="commPackage" name="commPackage" type="text" placeholder="请输入包名"/></em>
 		</form>
 	</div>
 	<div class="wrapper header">
