--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -14,14 +14,14 @@
 	</div>
 	<div class="wrapper header">
 		<form id="frm" action="getConn">
-			<span>service:</span><em><input id="service" name="service" type="text" value="127.0.0.1" placeholder="请输入数据库地址"/></em>
-			<span>database:</span><em><input id="database" name="database" type="text"  placeholder="请输入数据库名字"/></em>
-			<span>port:</span><em><input id="port" name="port" type="text" value="3306"placeholder="请输入数据库端口"/></em>
-			<span>Account:</span><em><input id="uid" name="uid" type="text" value="root"placeholder="请输入数据库账户"/></em>
-			<span>pwd:</span><em><input id="pwd" name="pwd" type="text" value="123456"placeholder="请输入数据库密码"/></em>
-			<span>Author:</span><em><input id="Author" name="Author" type="text" value="renchaochao" placeholder="请输入代码里的author"/></em><br/>
-			<span>PackagePath:</span><em><input id="commPackage" name="commPackage" type="text" placeholder="请输入包名"/></em>
-			<span>CodePath:</span><em><input id="codePath" name="codePath" type="text" placeholder="生成代码存放的路径"/></em>
+			<span style="width: 250px"><span>service:</span><em><input id="service" name="service" type="text" value="127.0.0.1" placeholder="请输入数据库地址"/></em></span>
+			<span style="width: 250px"><span>database:</span><em><input id="database" name="database" type="text"  placeholder="请输入数据库名字"/></em></span>
+			<span style="width: 250px"><span>port:</span><em><input id="port" name="port" type="text" value="3306"placeholder="请输入数据库端口"/></em></span>
+			<span style="width: 250px"><span>Account:</span><em><input id="uid" name="uid" type="text" value="root"placeholder="请输入数据库账户"/></em></span>
+			<span style="width: 250px"><span>pwd:</span><em><input id="pwd" name="pwd" type="text" value="123456"placeholder="请输入数据库密码"/></em></span><br/>
+			<span style="width: 250px"><span>Author:</span><em><input id="Author" name="Author" type="text" value="renchaochao" placeholder="请输入代码里的author"/></em></span>
+			<span style="width: 250px"><span>PackagePath:</span><em><input id="commPackage" name="commPackage" type="text" placeholder="请输入包名"/></em></span>
+			<span style="width: 250px"><span>CodePath:</span><em><input id="codePath" name="codePath" type="text" placeholder="生成代码存放的路径"/></em></span>
 		</form>
 	</div>
 	<div class="wrapper header">
